<resources>
    <string name="app_name">Hotel</string>

    <string name="bottom_title_room">房源</string>
    <string name="bottom_title_order">订单</string>
    <string name="bottom_title_mine">我的</string>

    <string name="bottom_title_user_manage">用户管理</string>
    <string name="bottom_title_room_manage">客房管理</string>
    <string name="bottom_title_order_manage">订单管理</string>
    <string name="bottom_title_announcement">公告与留言</string>
    <string name="bottom_title_report_form">报表</string>

    <string name="book_who_live_in">入住人</string>
    <string name="idcard">身份证</string>

    <string-array name="spinner_people_number">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

    <string name="book_time">入住时段</string>
    <string name="book_people">入住人信息</string>
    <string name="book_other">其他</string>

    <string name="order_id">订单编号:</string>
    <string name="order_book_time">下单时间</string>
    <string name="live_in_time_start">入住时间</string>
    <string name="live_in_time_end">退房时间</string>
    <string name="room_id">房间号</string>
    <string name="total_pay">实付款</string>

    <string name="logout">登出</string>


    <string name="username">用户名</string>
    <string name="password">密码</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="age">年龄</string>
    <string name="phone">电话号码</string>


    <string name="order_manage_fragment_title">OrderManage</string>
    <string name="user_manage_fragment_title">UserManage</string>
    <string name="room_manage_fragment_title">RoomManage</string>
    <string name="comment_manage_fragment_title">CommentManage</string>
    <string name="report_fragment_title">Report</string>

    <string name="user_objID">用户编号</string>
    <string name="gender">性别</string>
    <string name="createAt">创建时间</string>
    <string name="updateTime">更新时间</string>

    <string name="change">修改</string>

    <string name="room_number">房间号</string>
    <string name="price">价格</string>
    <string name="room_type">房间类型</string>

    <string name="title">标题</string>

    <string name="room_type_and_name">房间型号</string>
    <string name="room_content">房间内容</string>
    <string name="room_pre_comment">预设评论</string>
    <string name="img_url">图片URL</string>
    <string name="room_img">房间图片</string>
    <string name="add">添加</string>
    <string name="order_canceled">已取消</string>
    <string name="order_finished">已完成</string>
    <string name="order_doing">正在进行</string>
    <string name="discount">折扣</string>

    <string name="income">收入</string>
    <string name="cancel_order">已取消</string>
    <string name="day_livein_present">日入住率</string>
</resources>