<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userManageFragment"
        android:icon="@drawable/ic_user_manage_24"
        android:title="@string/user_manage_fragment_title" />
    <item
        android:id="@+id/roomManageFragment"
        android:icon="@drawable/ic_room_manage_24"
        android:title="@string/room_manage_fragment_title" />
    <item
        android:id="@+id/orderManageFragment"
        android:icon="@drawable/ic_list_manage_24"
        android:title="@string/order_manage_fragment_title" />
    <item
        android:id="@+id/commentManageFragment"
        android:icon="@drawable/ic_comment_manage_24"
        android:title="@string/comment_manage_fragment_title" />
    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/ic_report_24"
        android:title="@string/report_fragment_title" />
</menu>