<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="250dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/singleUserInfo_collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/月色白">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/username"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_username"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/分割线"/>
                    <TextView
                        android:text="@string/user_objID"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_objID"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/gender"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_gender"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/分割线"/>
                    <TextView
                        android:text="@string/idcard"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_IDcard"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/phone"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_phone"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/createAt"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_createAt"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/分割线"/>
                    <TextView
                        android:text="@string/updateTime"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/single_user_info_updateTime"
                        android:text="111"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"/>

                </LinearLayout>
            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/single_user_info_recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>